--- a/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudHostingCloudSoftware.yml
+++ b/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudHostingCloudSoftware.yml
@@ -9,10 +9,14 @@ question: >
 type: radios
 options:
   - label: "Yes"
-  - label: "No"
   - label: "My organisation isn't submitting cloud hosting (lot 1) or cloud software (lot 2) services"
-
+validations:
+  # Used in custom validator for those not submitting on (lot1 and lot2) and (lot3)
+  # See app/main/helpers/validation.py::G12Validator
+  - name: dependent_question_error
+    message: You need to answer "Yes" to either this question or question 2
 assessment:
+  required: True
   passIfIn:
     - "Yes"
     - "My organisation isn't submitting cloud hosting (lot 1) or cloud software (lot 2) services"
