--- a/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudSupport.yml
+++ b/frameworks/g-cloud-12/questions/declaration/servicesHaveOrSupportCloudSupport.yml
@@ -8,10 +8,14 @@ question: >
 type: radios
 options:
   - label: "Yes"
-  - label: "No"
   - label: "My organisation isn't submitting cloud support (lot 3) services"
-
+validations:
+  # Used in custom validator for those not submitting on (lot1 and lot2) and (lot3)
+  # See app/main/helpers/validation.py::G12Validator
+  - name: dependent_question_error
+    message: You need to answer "Yes" to either this question or question 1
 assessment:
+  required: True
   passIfIn:
     - "Yes"
     - "My organisation isn't submitting cloud support (lot 3) services"
