Declaration questions: answer_required

--- a/frameworks/g-cloud-12/questions/declaration/mitigatingFactors.yml
+++ b/frameworks/g-cloud-12/questions/declaration/mitigatingFactors.yml
@@ -6,4 +6,4 @@ type: textbox_large
 validations:
   - 
     name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to one of questions [[taxEvasion]] to [[misleadingInformation]].
+    message: Enter details of mitigating factors about [[taxEvasion]] to [[misleadingInformation]].
