--- a/frameworks/g-cloud-12/questions/services/pricingDocumentURL.yml
+++ b/frameworks/g-cloud-12/questions/services/pricingDocumentURL.yml
@@ -13,7 +13,7 @@ type: upload
 
 validations:
   - name: answer_required
-    message: You need to upload a pricing document.
+    message: Select a file.
   - name: file_is_open_document_format
     message: Your document is not in an open format. Please save as an Open Document Format (ODF) or PDF/A (eg .pdf, .odt).
   - name: file_is_less_than_5mb
