Service questions: boolean answer_required

--- a/frameworks/g-cloud-12/questions/services/APIDocumentation.yml
+++ b/frameworks/g-cloud-12/questions/services/APIDocumentation.yml
@@ -15,4 +15,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you provide API documentation for your service.
