--- a/frameworks/g-cloud-12/questions/services/dataStorageAndProcessingUserControl.yml
+++ b/frameworks/g-cloud-12/questions/services/dataStorageAndProcessingUserControl.yml
@@ -12,4 +12,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if users can specify where data is stored and processed.
