--- a/frameworks/g-cloud-12/questions/services/scaling.yml
+++ b/frameworks/g-cloud-12/questions/services/scaling.yml
@@ -13,4 +13,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service scales without the user having to contact your support team.
