--- a/frameworks/g-cloud-12/questions/services/standardsCSASTAR.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsCSASTAR.yml
@@ -20,4 +20,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you have a current CSA STAR certification.
