--- a/frameworks/g-cloud-12/questions/services/trainingServiceSpecific.yml
+++ b/frameworks/g-cloud-12/questions/services/trainingServiceSpecific.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your training is for specific cloud hosting or software services.
