--- a/frameworks/g-cloud-12/questions/services/usageNotifications.yml
+++ b/frameworks/g-cloud-12/questions/services/usageNotifications.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you notify users if their usage nears service limits.
