--- a/frameworks/g-cloud-12/questions/services/userAuthenticationNeeded.yml
+++ b/frameworks/g-cloud-12/questions/services/userAuthenticationNeeded.yml
@@ -13,4 +13,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if users need to be authenticated when using your service.
