--- a/frameworks/g-cloud-12/questions/services/APISandbox.yml
+++ b/frameworks/g-cloud-12/questions/services/APISandbox.yml
@@ -11,4 +11,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if there is a sandbox or test environment for your API.
