--- a/frameworks/g-cloud-12/questions/services/QAAndTesting.yml
+++ b/frameworks/g-cloud-12/questions/services/QAAndTesting.yml
@@ -13,4 +13,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you provide quality assurance and performance testing.
