--- a/frameworks/g-cloud-12/questions/services/accreditationsOther.yml
+++ b/frameworks/g-cloud-12/questions/services/accreditationsOther.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you have any other security certifications.
