--- a/frameworks/g-cloud-12/questions/services/backup.yml
+++ b/frameworks/g-cloud-12/questions/services/backup.yml
@@ -22,4 +22,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service provides backup and recovery.
