--- a/frameworks/g-cloud-12/questions/services/boardLevelServiceSecurity.yml
+++ b/frameworks/g-cloud-12/questions/services/boardLevelServiceSecurity.yml
@@ -17,4 +17,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your organisation has a board-level person responsible for service security.
