--- a/frameworks/g-cloud-12/questions/services/browsersAccess.yml
+++ b/frameworks/g-cloud-12/questions/services/browsersAccess.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service is accessed through a browser.
