--- a/frameworks/g-cloud-12/questions/services/commandLineInterface.yml
+++ b/frameworks/g-cloud-12/questions/services/commandLineInterface.yml
@@ -15,4 +15,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if there is a command line interface for your service.
