--- a/frameworks/g-cloud-12/questions/services/educationPricing.yml
+++ b/frameworks/g-cloud-12/questions/services/educationPricing.yml
@@ -13,4 +13,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you offer special pricing for educational organisations.
