--- a/frameworks/g-cloud-12/questions/services/emailOrTicketingSupportPriority.yml
+++ b/frameworks/g-cloud-12/questions/services/emailOrTicketingSupportPriority.yml
@@ -16,4 +16,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if users can manage the status and priority of their support tickets.
