--- a/frameworks/g-cloud-12/questions/services/energyEfficientDatacentres.yml
+++ b/frameworks/g-cloud-12/questions/services/energyEfficientDatacentres.yml
@@ -15,4 +15,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your datacentres adhere to the EU code of conduct.
