--- a/frameworks/g-cloud-12/questions/services/freeVersionTrialOption.yml
+++ b/frameworks/g-cloud-12/questions/services/freeVersionTrialOption.yml
@@ -18,4 +18,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if there is a free trial option for your service.
