--- a/frameworks/g-cloud-12/questions/services/installation.yml
+++ b/frameworks/g-cloud-12/questions/services/installation.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if there is an application that users install to use your service.
