--- a/frameworks/g-cloud-12/questions/services/metricsHosting.yml
+++ b/frameworks/g-cloud-12/questions/services/metricsHosting.yml
@@ -16,4 +16,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you provide infrastructure or application metrics.
