--- a/frameworks/g-cloud-12/questions/services/mobile.yml
+++ b/frameworks/g-cloud-12/questions/services/mobile.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service has been designed to work on mobile devices.
