--- a/frameworks/g-cloud-12/questions/services/ongoingSupport.yml
+++ b/frameworks/g-cloud-12/questions/services/ongoingSupport.yml
@@ -21,4 +21,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you support cloud hosting or software services.
