--- a/frameworks/g-cloud-12/questions/services/planningServiceCompatibility.yml
+++ b/frameworks/g-cloud-12/questions/services/planningServiceCompatibility.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your planning service is for specific hosting or software services.
