--- a/frameworks/g-cloud-12/questions/services/publicSectorNetworks.yml
+++ b/frameworks/g-cloud-12/questions/services/publicSectorNetworks.yml
@@ -13,4 +13,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service connects to any public sector networks.
