--- a/frameworks/g-cloud-12/questions/services/securityTestingCCP.yml
+++ b/frameworks/g-cloud-12/questions/services/securityTestingCCP.yml
@@ -11,4 +11,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your risk analysts are CCP scheme-accredited.
