--- a/frameworks/g-cloud-12/questions/services/setupAndMigrationService.yml
+++ b/frameworks/g-cloud-12/questions/services/setupAndMigrationService.yml
@@ -16,4 +16,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your service helps buyers migrate to the cloud or between cloud services.
