--- a/frameworks/g-cloud-12/questions/services/setupAndMigrationServiceSpecific.yml
+++ b/frameworks/g-cloud-12/questions/services/setupAndMigrationServiceSpecific.yml
@@ -14,4 +14,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if your migration service is for specific cloud services.
