--- a/frameworks/g-cloud-12/questions/services/standardsISO28000.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsISO28000.yml
@@ -19,4 +19,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you have a current ISO 28000:2007 certification.
