--- a/frameworks/g-cloud-12/questions/services/supportAvailableToThirdParty.yml
+++ b/frameworks/g-cloud-12/questions/services/supportAvailableToThirdParty.yml
@@ -12,4 +12,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if third parties engaged by the buyer can access the support features of your service.
