--- a/frameworks/g-cloud-12/questions/services/training.yml
+++ b/frameworks/g-cloud-12/questions/services/training.yml
@@ -15,4 +15,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you provide training for cloud software and hosting services.
