--- a/frameworks/g-cloud-12/questions/services/virtualisation.yml
+++ b/frameworks/g-cloud-12/questions/services/virtualisation.yml
@@ -20,4 +20,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if you rely on virtualisation technology for shared infrastructure.
