--- a/frameworks/g-cloud-12/questions/services/webInterface.yml
+++ b/frameworks/g-cloud-12/questions/services/webInterface.yml
@@ -17,4 +17,4 @@ type: boolean
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select yes if there is a web interface for your service.
