--- a/frameworks/g-cloud-12/questions/services/accessRestrictionTesting.yml
+++ b/frameworks/g-cloud-12/questions/services/accessRestrictionTesting.yml
@@ -20,4 +20,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how often you test your access controls.
