--- a/frameworks/g-cloud-12/questions/services/auditBuyersActions.yml
+++ b/frameworks/g-cloud-12/questions/services/auditBuyersActions.yml
@@ -32,4 +32,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how buyers access audit information about their users.
