--- a/frameworks/g-cloud-12/questions/services/auditSuppliersActions.yml
+++ b/frameworks/g-cloud-12/questions/services/auditSuppliersActions.yml
@@ -28,4 +28,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how buyers access audit information about your organisation.
