--- a/frameworks/g-cloud-12/questions/services/configurationAndChangeManagementType.yml
+++ b/frameworks/g-cloud-12/questions/services/configurationAndChangeManagementType.yml
@@ -20,4 +20,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select if your organisation conforms to a recognised standard or defines its own controls.
