--- a/frameworks/g-cloud-12/questions/services/datacentreSecurityStandards.yml
+++ b/frameworks/g-cloud-12/questions/services/datacentreSecurityStandards.yml
@@ -26,4 +26,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select which standards your datacentre security setup complies with.
