--- a/frameworks/g-cloud-12/questions/services/documentationAccessibility.yml
+++ b/frameworks/g-cloud-12/questions/services/documentationAccessibility.yml
@@ -24,4 +24,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select what accessibility standards your documentation meets.
