--- a/frameworks/g-cloud-12/questions/services/emailOrTicketingSupport.yml
+++ b/frameworks/g-cloud-12/questions/services/emailOrTicketingSupport.yml
@@ -33,4 +33,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the type of email or ticketing support you offer.
