--- a/frameworks/g-cloud-12/questions/services/emailOrTicketingSupportAccessibility.yml
+++ b/frameworks/g-cloud-12/questions/services/emailOrTicketingSupportAccessibility.yml
@@ -22,4 +22,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select what accessibility standards your online ticketing support management meets.
