--- a/frameworks/g-cloud-12/questions/services/equipmentDisposalApproach.yml
+++ b/frameworks/g-cloud-12/questions/services/equipmentDisposalApproach.yml
@@ -23,4 +23,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how you dispose of equipment.
