--- a/frameworks/g-cloud-12/questions/services/governmentSecurityClearances.yml
+++ b/frameworks/g-cloud-12/questions/services/governmentSecurityClearances.yml
@@ -23,4 +23,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select what level of security clearance you are prepared to offer.
