--- a/frameworks/g-cloud-12/questions/services/howLongSystemLogsStored.yml
+++ b/frameworks/g-cloud-12/questions/services/howLongSystemLogsStored.yml
@@ -23,4 +23,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how long you store system logs for.
