--- a/frameworks/g-cloud-12/questions/services/incidentManagementType.yml
+++ b/frameworks/g-cloud-12/questions/services/incidentManagementType.yml
@@ -22,4 +22,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select which incident management processes your organisation complies with.
