--- a/frameworks/g-cloud-12/questions/services/onsiteSupport.yml
+++ b/frameworks/g-cloud-12/questions/services/onsiteSupport.yml
@@ -25,4 +25,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the type of onsite support you provide.
