--- a/frameworks/g-cloud-12/questions/services/penetrationTesting.yml
+++ b/frameworks/g-cloud-12/questions/services/penetrationTesting.yml
@@ -31,4 +31,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how often you do penentration testing.
