--- a/frameworks/g-cloud-12/questions/services/penetrationTestingApproach.yml
+++ b/frameworks/g-cloud-12/questions/services/penetrationTestingApproach.yml
@@ -31,4 +31,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the type of penetration testing your organisation carries out.
