--- a/frameworks/g-cloud-12/questions/services/protectiveMonitoringType.yml
+++ b/frameworks/g-cloud-12/questions/services/protectiveMonitoringType.yml
@@ -22,4 +22,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the type of protective monitoring process you comply with.
