--- a/frameworks/g-cloud-12/questions/services/resellingType.yml
+++ b/frameworks/g-cloud-12/questions/services/resellingType.yml
@@ -30,4 +30,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select if you are reselling another organisation's services.
