--- a/frameworks/g-cloud-12/questions/services/secureDevelopment.yml
+++ b/frameworks/g-cloud-12/questions/services/secureDevelopment.yml
@@ -24,4 +24,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select how you demonstate that you adhere to secure software development best practice.
