--- a/frameworks/g-cloud-12/questions/services/serviceAddOnType.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceAddOnType.yml
@@ -22,4 +22,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select if your service is an add-on or extension to other software services.
