--- a/frameworks/g-cloud-12/questions/services/standardsCSASTARLevel.yml
+++ b/frameworks/g-cloud-12/questions/services/standardsCSASTARLevel.yml
@@ -23,4 +23,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the level of CSA STAR certification.
