--- a/frameworks/g-cloud-12/questions/services/webChatSupport.yml
+++ b/frameworks/g-cloud-12/questions/services/webChatSupport.yml
@@ -36,4 +36,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select the type of web chat support you provide.
