--- a/frameworks/g-cloud-12/questions/services/webChatSupportAccessibility.yml
+++ b/frameworks/g-cloud-12/questions/services/webChatSupportAccessibility.yml
@@ -25,4 +25,4 @@ options:
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Select what accessibility standards your web chat meets.
