--- a/frameworks/g-cloud-12/questions/services/endOfContractDataExtraction.yml
+++ b/frameworks/g-cloud-12/questions/services/endOfContractDataExtraction.yml
@@ -12,7 +12,7 @@ max_length_in_words: 200
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter description.
   - name: under_200_words
     message: Your answer must be no longer than 200 words.
   - name: under_character_limit
