--- a/frameworks/g-cloud-12/questions/services/serviceDescription.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceDescription.yml
@@ -13,7 +13,7 @@ max_length_in_words: 50
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter summary.
   - name: under_50_words
     message: Your description must be no more than 50 words.
   - name: under_character_limit
