--- a/frameworks/g-cloud-12/questions/services/serviceInterfaceDescription.yml
+++ b/frameworks/g-cloud-12/questions/services/serviceInterfaceDescription.yml
@@ -12,7 +12,7 @@ max_length_in_words: 100
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter description.
   - name: under_100_words
     message: Your description must be no more than 100 words.
   - name: under_character_limit
