--- a/frameworks/g-cloud-12/questions/services/webInterfaceAccessibilityDescription.yml
+++ b/frameworks/g-cloud-12/questions/services/webInterfaceAccessibilityDescription.yml
@@ -16,7 +16,7 @@ max_length_in_words: 200
 
 validations:
   - name: answer_required
-    message: You need to answer this question.
+    message: Enter description.
   - name: under_200_words
     message: Your description must be no more than 200 words.
   - name: under_character_limit
